2010-02-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/modhpsol.spad.pamphlet:
	naiveBeckermannLabahnMultipoint(): Add sanity test.

2010-02-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* Makefile.in: Correct typo.

2010-02-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-funsel.boot: constructSubst(): Make more
	efficient by using prebuild argument markers.

2010-01-31  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/float.spad.pamphlet: Compute e faster.

2010-01-30  Martin Rubey  <martin.rubey@univie.ac.at>

	* src/algebra/unittest.spad.pamphlet: cleanup, report unexpected
	passes.

	* src/input/mantepse.input.pamphlet: add another test exhibiting a
	wrong simplification in RECOP.

2010-01-29  Martin Rubey  <martin.rubey@univie.ac.at>

	* src/input/mantepse.input.pamphlet: add tests for guessing over
	prime field.

	* src/algebra/ssolve.spad.pamphlet: correct types in testcases and
	add another test.

2010-01-28   Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/taylor.spad.pamphlet: revert(): Handle
	series with coefficient of 'x' not equal to 1.

2010-01-28   Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/catdef.spad.pamphlet,
	src/algebra/naalgc.spad.pamphlet,
	src/algebra/opalg.spad.pamphlet,
	src/algebra/trigcat.spad.pamphlet: Remove commented out code.

2010-01-28   Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Avoid too long argument lists when concatenating strings.
	* src/interp/macros.lisp: replaceString(): New function.
	src/interp/g-util.boot: concatenateStringList(): New
	function, use replaceString.
	src/interp/bc-solve.boot, src/interp/ht-util.boot,
	src/interp/pspad1.boot, src/interp/br-saturn.boot,
	src/interp/i-output.boot, src/interp/i-toplev.boot:
	Use concatenateStringList.

2010-01-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/hyper/lex.c: reset_connection(): Avoid crash
	writing to constant string.

2010-01-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
