@@ -671,6 +671,11 @@ SparseUnivariatePolynomial(R:Ring): UnivariatePolynomialCategory(R) with
    kBound: NonNegativeInteger := 63
    upmp := UnivariatePolynomialMultiplicationPackage(R,%)
 
+   makeSUP(p : %) : SparseUnivariatePolynomial(R) ==
+       p pretend SparseUnivariatePolynomial(R)
+
+   unmakeSUP(sp : SparseUnivariatePolynomial(R)) : % ==
+       sp pretend %
 
    if R has FieldOfPrimeCharacteristic  then
          p ^ np == p ^ (np pretend NonNegativeInteger)
