@@ -1,5 +1,13 @@
 2010-02-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/algebra/listgcd.spad.pamphlet,
+	src/algebra/pgcd.spad.pamphlet,
+	src/algebra/u32vec.spad.pamphlet,
+	src/algebra/poly.spad.pamphlet,
+	src/interp/primitives.lisp: Faster polynomial gcd.
+
+2010-02-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/algebra/modhpsol.spad.pamphlet:
 	naiveBeckermannLabahnMultipoint(): Add sanity test.
 
